unpackaged/objects/Lightning_Component__mdt.object
<CustomObject>
  <description>List of available Lightning Components, used in Team Setup</description>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>All</fullName>
          <default>true</default>
          <label>All</label>
        </value>
        <value>
          <fullName>Sales Cloud</fullName>
        </value>
        <value>
          <fullName>Service Cloud</fullName>
        </value>
        <value>
          <fullName>TeamForce</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Link_to_documentation__c</fullName>
    <label>Link to documentation</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Managed_by__c</fullName>
    <label>Managed by</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <defaultValue>'In development'</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>In development</fullName>
          <default>true</default>
          <label>In development</label>
        </value>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Retired</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Lightning Component</label>
  <pluralLabel>Lightning Components</pluralLabel>
</CustomObject>